added students and teachers compnent

--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,6 +1,7 @@
 
 .wrapper{
-  width:420px;
+  width:80%;
+  max-width:420px;
   /* background: gray; */
   border-radius: 10px;
   background-color: #F7F9F2;
@@ -26,7 +27,7 @@
   border-radius: 40px;
   font-size: 16px;
   color: #000;
-  padding: 20px 45px 20px 20px
+  padding: 15px 30px 15px 20px;
 }
 .input-box input ::placeholder{
   color: #000;
@@ -43,7 +44,14 @@
   display: flex;
   justify-content: space-between;
   font-size: 15px;
-  margin-left:10px;
+  /* margin-left:10px; */
+
+}
+.wrapper .remember label{
+  padding-left: 10px;
+}
+.remember input[type="checkbox"] {
+  margin-right: 5px; 
 }
 .wrapper button{
   width: 100%;
@@ -56,7 +64,7 @@
   cursor: pointer;
   font-weight: 700;
   box-shadow: 0 0 10px rgba(0,0,0,-1);
-  outline: none;
+  border: 1px solid black;
 
 }
 .wrapper .register-link{
@@ -64,7 +72,20 @@
   text-align: center;
   margin: 20px 0 15px;  
 }
-
+@media (max-width: 768px) {
+  .wrapper {
+    width: 90%;
+  }
+  .input-box {
+    margin: 20px 0;
+  }
+  .input-box input {
+    font-size: 14px; 
+  }
+  .wrapper h1 {
+    font-size: 30px;
+  }
+}
 /* .register-link p a{
   color: #000;
   text-decoration: none;
